samples/_failures_safe/1761663004_b8b3ba_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ae3c358a.c: In function ‘tokenize’:
./samples/SAFE/__tmp_ae3c358a.c:171:9: error: ‘str’ undeclared (first use in this function)
  171 |         str
      |         ^~~
./samples/SAFE/__tmp_ae3c358a.c:171:9: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_ae3c358a.c:171:12: error: expected ‘;’ at end of input
  171 |         str
      |            ^
      |            ;
./samples/SAFE/__tmp_ae3c358a.c:171:9: error: expected declaration or statement at end of input
  171 |         str
      |         ^~~
./samples/SAFE/__tmp_ae3c358a.c:171:9: error: expected declaration or statement at end of input
